--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -6,38 +6,49 @@ on:
   pull_request:
     branches: [ main ]
 
+permissions:
+  contents: read
+  pages: write
+  id-token: write
+
 jobs:
-  build-and-deploy:
+
+  build:
     runs-on: ubuntu-latest
-    
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@
       
-    - name: Set up Python
-      uses: actions/setup-python@v4
-      with:
-        python-version: '3.9'
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.9'
+          
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install sphinx sphinx-rtd-theme
+          pip install -e .
+          
+      - name: Build documentation
+        run: |
+          cd docs
+          make html
         
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install sphinx sphinx-rtd-theme
-        pip install -e .
-        
-    - name: Build documentation
-      run: |
-        cd docs
-        make html
-      
-    - name: Setup Pages
-      uses: actions/configure-pages@v3
-      
-    - name: Upload artifact
-      uses: actions/upload-pages-artifact@v2
-      with:
-        path: docs/_build/html/
-        
-    - name: Deploy to GitHub Pages
-      uses: actions/deploy-pages@v2
-      if: github.ref == 'refs/heads/main'
+
+      - name: Upload Pages artifact
+        uses: actions/upload-pages-artifact@
+        with:
+          path: docs/_build/html
+
+
+  deploy:
+    runs-on: ubuntu-latest
+    needs: 
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
+    steps:
+      - name: Deploy to GitHub Pages
+        id: deployment
+        uses: actions/deploy-pages@
